Refaktoroin koodia. Implementoin LinkedListin ja ArraysFillin